fix: keep min/med glfofas readable AB#25280

--- a/interfaces/IBF-dashboard/src/theme/ibf-colors/_index.scss
+++ b/interfaces/IBF-dashboard/src/theme/ibf-colors/_index.scss
@@ -67,14 +67,14 @@
 
   --ion-color-ibf-yellow: #feff02;
   --ion-color-ibf-yellow-rgb: 254, 255, 2;
-  --ion-color-ibf-yellow-contrast: #000000;
+  --ion-color-ibf-yellow-contrast: #808080;
   --ion-color-ibf-yellow-contrast-rgb: 0, 0, 0;
   --ion-color-ibf-yellow-shade: #feff02;
   --ion-color-ibf-yellow-tint: #feff02;
 
   --ion-color-ibf-orange: #fcb50c;
   --ion-color-ibf-orange-rgb: 252, 181, 12;
-  --ion-color-ibf-orange-contrast: #000000;
+  --ion-color-ibf-orange-contrast: #808080;
   --ion-color-ibf-orange-contrast-rgb: 0, 0, 0;
   --ion-color-ibf-orange-shade: #fcb50c;
   --ion-color-ibf-orange-tint: #fcb50c;
